--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,4 +1,4 @@
-version: "2.0"
+version: "3.0"
 
 rules:
 
@@ -14,5 +14,5 @@ rules:
 
 - rule: Ask user to rephrase whether intent is not clear
   steps:
-  - intetn: nlu_fallback
+  - intent: nlu_fallback
   - action: utter_rephrase_
